<resources>
    <string name="app_name">Goldie.inc</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="chocolate">chocolate</string>
    <string name="strawberry">strawberry</string>
    <string name="pick_cup_size">pick cup size</string>
    <string name="_3">3$</string>
    <string name="_4">4$</string>
    <string name="apply">apply</string>
    <string name="pick_flavor">pick flavor</string>
    <string name="vanilla">vanilla</string>
    <string name="peach">peach</string>
    <string name="mango">mango</string>
    <string name="blueberry">blueberry</string>
    <string name="cup_or_cone">cup or cone?</string>
    <string name="pistachio">pistachio</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="classic">classic</string>
    <string name="_8">8$</string>
    <string name="a_classic_waffle_with_2_scoops_of_ice_cream_whipped_cream_and_a_chocolate_milkshake">a classic waffle with 2 scoops of ice cream, whipped cream and a chocolate milkshake</string>
    <string name="coffee">coffee</string>
    <string name="_9">9$</string>
    <string name="coffee_flavored_waffle_with_2_chocolate_ice_cream_scoops_and_a_coffee_milkshake">coffee flavored waffle with 2 chocolate ice cream scoops and a coffee milkshake</string>
    <string name="butter">butter</string>
    <string name="_10">10$</string>
    <string name="waffle_with_butter_3_scoops_of_vanilla_ice_cream_and_a_strawberry_milkshake">waffle with butter, 3 scoops of vanilla ice cream and a strawberry milkshake</string>
    <string name="chocolate_waffle_3_scoops_of_vanilla_ice_cream_whipped_cream_and_a_chocolate_milkshake">chocolate waffle, 3 scoops of vanilla ice cream whipped cream and a chocolate milkshake</string>
    <string name="click_on_the_chocolate_you_want">click on the chocolate you want</string>
    <string name="click_on_the_topping_you_want">click on the topping you want</string>
    <string name="_1">1$</string>
    <string name="_2">2$</string>
    <string name="_0">0$</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_login">Login</string>
    <string name="back">back</string>
    <string name="kivi">kivi</string>
    <string name="blackberry">blackberry</string>
    <string name="kiwi">kiwi</string>
    <string name="the_products_added_to_your_shopping_cart">The products added to your shopping cart!</string>
    <string name="what_would_you_like_to_do_next">What would you like to do next?</string>
    <string name="go_back_to_menu">Go back to menu</string>
    <string name="keep_shopping">Keep shopping</string>
    <string name="edit_order_and_pay">edit order and pay</string>
    <string name="name_on_card">Name On Card</string>
    <string name="up_to_3_scoops">up to 3 scoops</string>
    <string name="up_to_3_scoops_">*up to 3 scoops</string>
    <string name="chocolate1">Chocolate</string>
    <string name="toppings">toppings</string>
    <string name="flavors">Flavors</string>
    <string name="banana_top">banana</string>
    <string name="berry_top">berry</string>
    <string name="gummy">gummy</string>
    <string name="berry">berry</string>
    <string name="banana">banana</string>
    <string name="cream">cream</string>
    <string name="oreo">oreo</string>
    <string name="sprinklers">sprinklers</string>
    <string name="white_chocolate">white_chocolate</string>
    <string name="Classic">Classic</string>
    <string name="gummibear">gummibear</string>
    <string name="whipped_cream">whipped cream</string>
    <string name="dark_chocolate">dark chocolate</string>
    <string name="white_chocolote">white chocolote</string>
    <string name="up_to_3_topping">*up to 3 topping</string>
    <string name="_5_per_crepe">*5$ per crepe</string>
    <string name="_1_per_scoop">*1$ per scoop</string>
    <string name="payment">Payment</string>
    <string name="product_list">Product List</string>
    <string name="storage_management">Storage Management</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">cancel</string>
    <string name="add_to_stock">Add to stock</string>
    <string name="add_to_shopping_cart">Add to shopping cart</string>
    <string name="order_details">Order Details</string>
</resources>