<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back">

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="165dp"
        android:layout_height="164dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/classic"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="241dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="193dp"
        android:layout_height="187dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/coffee"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="223dp"
        tools:layout_editor_absoluteY="154dp" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="166dp"
        android:layout_height="175dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/butter"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-10dp"
        tools:layout_editor_absoluteY="341dp" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="166dp"
        android:layout_height="165dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/coholate"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-10dp"
        tools:layout_editor_absoluteY="498dp" />

    <TextView
        android:id="@+id/ClassicTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/classic"
        android:textColor="@color/black"
        android:textSize="27sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/ClassicPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/_8"
        android:textColor="@color/black"
        android:textSize="25sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="122dp" />

    <TextView
        android:id="@+id/ClassicDes"
        android:layout_width="262dp"
        android:layout_height="60dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/a_classic_waffle_with_2_scoops_of_ice_cream_whipped_cream_and_a_chocolate_milkshake"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="62dp" />


    <TextView
        android:id="@+id/CoffeeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/coffee"
        android:textColor="@color/black"
        android:textSize="27sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="187dp" />


    <TextView
        android:id="@+id/CoffeePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/_9"
        android:textColor="@color/black"
        android:textSize="25sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="283dp" />

    <TextView
        android:id="@+id/CoffeeDes"
        android:layout_width="262dp"
        android:layout_height="60dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/coffee_flavored_waffle_with_2_chocolate_ice_cream_balls_and_a_coffee_milkshake"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="223dp" />

    <TextView
        android:id="@+id/ButterTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/butter"
        android:textColor="@color/black"
        android:textSize="27sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="241dp"
        tools:layout_editor_absoluteY="372dp" />


    <TextView
        android:id="@+id/ButterPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/_10"
        android:textColor="@color/black"
        android:textSize="25sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="258dp"
        tools:layout_editor_absoluteY="449dp" />

    <TextView
        android:id="@+id/ButterDes"
        android:layout_width="262dp"
        android:layout_height="60dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/waffle_with_butter_3_scoops_of_vanilla_ice_cream_and_a_strawberry_milkshake"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="144dp"
        tools:layout_editor_absoluteY="398dp" />


    <TextView
        android:id="@+id/chocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/chocolate"
        android:textColor="@color/black"
        android:textSize="27sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="522dp" />

    <TextView
        android:id="@+id/chocolatePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/_10"
        android:textColor="@color/black"
        android:textSize="25sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="258dp"
        tools:layout_editor_absoluteY="608dp" />

    <TextView
        android:id="@+id/chocolateDes"
        android:layout_width="262dp"
        android:layout_height="60dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/chocolate_waffle_3_scoops_of_vanilla_ice_cream_whipped_cream_and_a_chocolate_milkshake"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="548dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="104dp"
        android:layout_height="59dp"
        android:text="@string/apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        android:textColor="@color/black"
        tools:layout_editor_absoluteY="643dp" />
</androidx.constraintlayout.widget.ConstraintLayout>